--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Yu Liu</h4>
-              <p><em>Innovative and deadline-driven Engineer with 3+ years of industry experience  and developing.</em></p>
+              <p><em>Innovative and deadline-driven Engineer with 3+ years of industry experience and development.</em></p>
               <ul>
-                <li>1234 street , San Jose, CA</li>
-                <li>(123) 456-7891</li>
-                <li>bobby123@example.com</li>
+                <li>San Jose, CA</li>
+                <li>(646) 389 4834</li>
+                <li>liuy0311@ufl.edu</li>
               </ul>
             </div>
 
