--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Yu Liu</h4>
-              <p><em>Innovative and deadline-driven Engineer with 3+ years of industry experience and development.</em></p>
+              <p><em>Innovative and deadline-driven Engineer with 3+ years of industry experience  and developing.</em></p>
               <ul>
                 <li>San Jose, CA</li>
                 <li>(646) 389 4834</li>
@@ -390,7 +390,7 @@
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://devpost.com/software/uf-2020-filter" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -400,77 +400,78 @@
               <img src="assets/img/portfolio/portfolio-2.mp4" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.mp4" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://devpost.com/software/the-myomobile" title="More Details"><i class="bx bx-link"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
               </div>
             </div>
           </div>
-
+                <!--SSF  -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://www.instagram.com/ar/895395790985126/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
-
+            <!-- Real Estate Analyzer  -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://devpost.com/software/real-estate-analyzer" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
-
+            <!-- avatar -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://www.instagram.com/ar/2711209032431202/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
-
+            <!-- eye color changer -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://www.instagram.com/ar/3190936707634711/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
-
+            <!--  eye music -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://www.instagram.com/ar/282387836340674/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
-
+            <!-- Donut -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://www.instagram.com/ar/901051360419496/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
-
+            <!-- Umbrella Academy -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://www.instagram.com/ar/2703799226565178/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
