--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <div class="col-lg-6">
                 <ul>
                   <!-- <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 March 1996</li> -->
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.yufliu.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> https://yufliu.github.io</li>
 <!--                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1646 389 4834</li> -->
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> San Jose, CA, USA</li>
                 </ul>
