--- a/index.html
+++ b/index.html
@@ -621,11 +621,12 @@
                 <p>liuy0311@ufl.edu</p>
               </div>
 
-              <div class="phone">
+                <!-- Taken out because I dont want my phone number in here -->
+              <!-- <div class="phone">
                 <i class="icofont-phone"></i>
-                <h4>Text:</h4>
-<!--                 <p>+1 646 389 4834</p> -->
-              </div>
+                <h4>Text:</h4> -->
+                    <!--<p>+1 646 389 4834</p> -->
+              <!-- </div> -->
 
               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
               <!-- <iframe src="https://www.google.com/maps/place/Zenon+%26+Marilyn+Hansen+Scholarship+House,+1065+SW+9th+St,+Gainesville,+FL+32601/data=!4m2!3m1!1s0x88e8a3973d402237:0xd9ed907c43f3fdc0?sa=X&ved=2ahUKEwjN5Zi-5tXrAhUMFzQIHdPsBXEQ8gEwAHoECAsQAQ" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
@@ -636,8 +637,9 @@
 
           </div>
 
+<!-- START OF E-MAIL CONTACT FORM -->
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/mqkgqvve" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
@@ -668,6 +670,7 @@
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
           </div>
+           <!-- END OF E-MAIL CONTACT FORM -->
 
         </div>
 
