--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
           </div>
 
 <!-- START OF E-MAIL CONTACT FORM -->
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+          <!-- <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="https://formspree.io/f/mqkgqvve" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
@@ -669,7 +669,27 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-          </div>
+          </div> -->
+
+          <!-- modify this form HTML and place wherever you want your form -->
+
+<form
+  action="https://formspree.io/f/mqkgqvve"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="text" name="_replyto">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+
+  <!-- your other form fields go here -->
+
+  <button type="submit">Send</button>
+</form>
            <!-- END OF E-MAIL CONTACT FORM -->
 
         </div>
