--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
           </div>
 
 <!-- START OF E-MAIL CONTACT FORM -->
-          <!-- <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="https://formspree.io/f/mqkgqvve" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
@@ -648,7 +648,7 @@
                 </div>
                 <div class="form-group col-md-6">
                   <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" data-rule="email" data-msg="Please enter a valid email" />
+                  <input type="email" class="form-control" name="_replyto_" id="email" data-rule="email" data-msg="Please enter a valid email" />
                   <div class="validate"></div>
                 </div>
               </div>
@@ -669,11 +669,11 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-          </div> -->
+          </div>
 
           <!-- modify this form HTML and place wherever you want your form -->
 
-<form
+<!-- <form
   action="https://formspree.io/f/mqkgqvve"
   method="POST"
 >
@@ -686,10 +686,8 @@
     <textarea name="message"></textarea>
   </label>
 
-  <!-- your other form fields go here -->
-
   <button type="submit">Send</button>
-</form>
+</form> -->
            <!-- END OF E-MAIL CONTACT FORM -->
 
         </div>
