--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
 
 <!-- START OF E-MAIL CONTACT FORM -->
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="https://formspree.io/f/mqkgqvve" method="POST">
+            <form action="https://formspree.io/f/mqkgqvve" method="POST" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Your Name</label>
