--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Yu Liu</h1>
-      <p>I'm a <span class="typed" data-typed-items="Engineer, Developer, Freelancer, Tech Enthusiasist"></span></p>
+      <p>I'm <span class="typed" data-typed-items="an Engineer, a Developer, a Freelancer, a Tech Enthusiast"></span></p>
     </div>
   </section><!-- End Hero -->
 
