--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Yu Liu</h1>
-      <p>I'm a<span class="typed" data-typed-items="n Engineer, &nbsp;Developer,  &nbsp;Freelancer,  &nbsp;Tech Enthusiast"></span></p>
+      <p>I'm a<span class="typed" data-typed-items="n Engineer, &nbsp;&nbsp;Developer,  &nbsp;&nbsp;Freelancer,  &nbsp;Tech Enthusiast"></span></p>
     </div>
   </section><!-- End Hero -->
 
