--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Yu Liu - Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <!-- Google Search Console -->
+  <meta name="google-site-verification" content="FSvhJnmnHhLVlrS-sU5gp_Nu5-DS1vtY3kiLKHAo8Dc" />
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
