Updated meta descriptions and meta keywords

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+  <!-- SEO information -->
   <title>Yu Liu - Portfolio</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="description" content="I am a hardware developer and aspiring software engineer, real estate investor, and tech enthusiast. Skills include Python, C++, BASH and recently started to learn Web Development">
+  <meta name="keywords" content="Python, C++, Hardware Engineer, Software Engineer, San Jose, California, Engineer, Web development, Web developer, real estate, data, tech, bash, linux">
   <!-- Google Search Console -->
   <meta name="google-site-verification" content="FSvhJnmnHhLVlrS-sU5gp_Nu5-DS1vtY3kiLKHAo8Dc" />
 
