--- a/index.html
+++ b/index.html
@@ -379,15 +379,16 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-hackathons">Hackathons</li>
+              <li data-filter=".filter-websites">Websites</li>
               <li data-filter=".filter-sparkar">Spark AR/3D Modeling</li>
               <li data-filter=".filter-personal">Personal</li>
+              <!-- <li data-filter=".filter-hackathons">Hackathons</li> -->
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-
+          <!-- UF Filter -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
@@ -397,17 +398,16 @@
               </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-hackathons">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.mp4" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.mp4" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="https://devpost.com/software/the-myomobile" title="More Details"><i class="bx bx-link"></i></a>
-                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
-              </div>
+          <!-- WinryStays -->
+        <div class="col-lg-4 col-md-6 portfolio-item filter-websites">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/winrystayslogo.png" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/winrystayslogo.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="https://winrystays.com" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
+        </div>
                 <!--SSF  -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
             <div class="portfolio-wrap">
@@ -418,6 +418,38 @@
               </div>
             </div>
           </div>
+
+        <!-- myomobile -->
+        <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-2.mp4" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/portfolio-2.mp4" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="https://devpost.com/software/the-myomobile" title="More Details"><i class="bx bx-link"></i></a>
+              <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+            </div>
+          </div>
+        </div>
+          <!-- ForeverJML -->
+        <div class="col-lg-4 col-md-6 portfolio-item filter-websites">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/jml_logo1.png" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/jml_logo1.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="http://foreverjml.com" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+        </div>
+          <!-- CC Laundry -->
+        <div class="col-lg-4 col-md-6 portfolio-item filter-websites">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/ccl_logo.png" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/ccl_logo.png" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="https://www.instagram.com/p/CPMf_cSADko/" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+        </div>
             <!-- Real Estate Analyzer  -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-personal">
             <div class="portfolio-wrap">
@@ -438,49 +470,49 @@
               </div>
             </div>
           </div>
-            <!-- eye color changer -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="https://www.instagram.com/ar/3190936707634711/" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
+          <!-- Umbrella Academy -->
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="https://www.instagram.com/ar/2703799226565178/" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-            <!--  eye music -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="https://www.instagram.com/ar/282387836340674/" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
+        </div>
+          <!-- Donut -->
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+              <a href="https://www.instagram.com/ar/901051360419496/" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-            <!-- Donut -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="https://www.instagram.com/ar/901051360419496/" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
+        </div>
+        <!-- eye color changer -->
+      <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
+        <div class="portfolio-wrap">
+          <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+          <div class="portfolio-links">
+            <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+            <a href="https://www.instagram.com/ar/3190936707634711/" title="More Details"><i class="bx bx-link"></i></a>
+          </div>
+        </div>
+      </div>
+          <!--  eye music -->
+        <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+            <div class="portfolio-links">
+              <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+              <a href="https://www.instagram.com/ar/282387836340674/" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-            <!-- Umbrella Academy -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-sparkar">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="https://www.instagram.com/ar/2703799226565178/" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
         </div>
 
+
+        </div>
       </div>
     </section><!-- End Portfolio Section -->
 
