--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="social-links mt-3 text-center">
           <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-          <a href="https://www.instagram.com/yuf.tech/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/yu_creates/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
           <a href="https://www.linkedin.com/in/yufliu/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
