--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>liuy0311@ufl.edu</p>
+                <a href="yuliu1996@yahoo.com" target="_blank">Click to email me!</a> 
               </div>
 
                 <!-- Taken out because I dont want my phone number in here -->
