--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <ul>
                   <!-- <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 24</li> -->
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.S. Electrical Engineering</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> liuy0311@ufl.edu</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> yuliu1996@yahoo.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
@@ -265,7 +265,7 @@
               <ul>
                 <li>San Jose, CA</li>
 <!--                 <li>(646) 389 4834</li> -->
-                <li>liuy0311@ufl.edu</li>
+                <li>yuliu1996@yahoo.com</li>
               </ul>
             </div>
 
