--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <!-- <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 March 1996</li> -->
+
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> https://yufliu.github.io</li>
 <!--                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1646 389 4834</li> -->
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> San Jose, CA, USA</li>
@@ -116,7 +116,7 @@
                 <ul>
                   <!-- <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 24</li> -->
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.S. Electrical Engineering</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> yuliu1996@yahoo.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> <a href="mailto:yuliu1996@yahoo.com">Send Email</a> </li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
@@ -265,7 +265,7 @@
               <ul>
                 <li>San Jose, CA</li>
 <!--                 <li>(646) 389 4834</li> -->
-                <li>yuliu1996@yahoo.com</li>
+                <li><a href="mailto:yuliu1996@yahoo.com">Send Email</a></li>
               </ul>
             </div>
 
@@ -653,7 +653,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <a href="yuliu1996@yahoo.com" target="_blank">Click to email me!</a> 
+                <p> <a href="mailto:yuliu1996@yahoo.com">Send Email</a> </p>
               </div>
 
                 <!-- Taken out because I dont want my phone number in here -->
