--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <ul>
                   <!-- <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 24</li> -->
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.S. Electrical Engineering</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> <a href="mailto:yuliu1996@yahoo.com">Send Email</a> </li>
+<!--                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> <a href="mailto:yuliu1996@yahoo.com">Send Email</a> </li> -->
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
@@ -264,8 +264,7 @@
               <p><em>Innovative and deadline-driven Engineer with 3+ years of industry experience  and developing.</em></p>
               <ul>
                 <li>San Jose, CA</li>
-<!--                 <li>(646) 389 4834</li> -->
-                <li><a href="mailto:yuliu1996@yahoo.com">Send Email</a></li>
+<!--                 <li><a href="mailto:yuliu1996@yahoo.com">Send Email</a></li> -->
               </ul>
             </div>
 
@@ -650,11 +649,11 @@
                 <p>San Jose, CA</p>
               </div>
 
-              <div class="email">
+<!--               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
                 <p> <a href="mailto:yuliu1996@yahoo.com">Send Email</a> </p>
-              </div>
+              </div> -->
 
                 <!-- Taken out because I dont want my phone number in here -->
               <!-- <div class="phone">
