Contact me change
Please contact me via email on the form below

--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
 
         <div class="section-title2">
           <h2>Contact</h2>
-          <p>Please contact me via email or phone.</p>
+          <p>Please contact me via email on the form below.</p>
         </div>
 
         <div class="row" data-aos="fade-in">
